# edgezero

./: .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  TODO.md  clippy.toml  final_review.md  libtest_lint.rlib
crates/anyedge-adapter/: Cargo.toml
crates/anyedge-adapter-axum/: Cargo.toml
crates/anyedge-adapter-axum/src/: cli.rs  context.rs  dev_server.rs  lib.rs  proxy.rs  request.rs  response.rs  service.rs
crates/anyedge-adapter-axum/src/server/: convert.rs  mod.rs  runner.rs  service.rs
crates/anyedge-adapter-axum/src/templates/: Cargo.toml.hbs  axum.toml.hbs
crates/anyedge-adapter-cloudflare/: Cargo.toml
crates/anyedge-adapter-cloudflare/.cargo/: config.toml
crates/anyedge-adapter-cloudflare/src/: cli.rs  context.rs  lib.rs  proxy.rs  request.rs  response.rs
crates/anyedge-adapter-cloudflare/src/templates/: Cargo.toml.hbs
crates/anyedge-adapter-cloudflare/tests/: contract.rs
crates/anyedge-adapter-fastly/: Cargo.toml
crates/anyedge-adapter-fastly/src/: cli.rs  context.rs  lib.rs  logger.rs  proxy.rs  request.rs  response.rs
crates/anyedge-adapter-fastly/src/templates/: Cargo.toml.hbs  fastly.toml.hbs
crates/anyedge-adapter-fastly/tests/: contract.rs
crates/anyedge-adapter/src/: cli_support.rs  lib.rs  registry.rs  scaffold.rs
crates/anyedge-cli/: Cargo.toml  README.md  build.rs
crates/anyedge-cli/src/: adapter.rs  args.rs  dev_server.rs  generator.rs  main.rs  provider.rs  scaffold.rs
crates/anyedge-controller/: Cargo.toml
crates/anyedge-controller/src/: error.rs  extract.rs  format.rs  handler.rs  hooks.rs  lib.rs  request.rs  responder.rs  route_set.rs
crates/anyedge-core/: Cargo.toml
crates/anyedge-core/src/: app.rs  body.rs  context.rs  error.rs  extractor.rs  handler.rs  http.rs  lib.rs  logging.rs  manifest.rs  middleware.rs  params.rs  proxy.rs  responder.rs  response.rs  router.rs
crates/anyedge-fastly/: Cargo.toml
crates/anyedge-fastly/.cargo/: config.toml
crates/anyedge-fastly/src/: app.rs  cli.rs  http.rs  lib.rs  logging.rs  proxy.rs  stub.rs
crates/anyedge-macros/: Cargo.toml
crates/anyedge-macros/src/: action.rs  app.rs  lib.rs
crates/anyedge-macros/tests/: macros.rs
crates/edgezero-adapter/: Cargo.toml
crates/edgezero-adapter-axum/: Cargo.toml
crates/edgezero-adapter-axum/src/: cli.rs  config_store.rs  context.rs  dev_server.rs  key_value_store.rs  kv.rs  lib.rs  proxy.rs  request.rs  response.rs  secret_store.rs  service.rs  test_utils.rs
crates/edgezero-adapter-axum/src/cli/: mod.rs  provision_local.rs  run.rs
crates/edgezero-adapter-axum/src/templates/: Cargo.toml.hbs  axum.toml.hbs
crates/edgezero-adapter-cloudflare/: Cargo.toml
crates/edgezero-adapter-cloudflare/src/: cli.rs  config_store.rs  context.rs  key_value_store.rs  kv.rs  lib.rs  proxy.rs  request.rs  response.rs  secret_store.rs  store_handles.rs
crates/edgezero-adapter-cloudflare/src/cli/: mod.rs  provision_cloud.rs  provision_local.rs  push_cloud.rs  run.rs
crates/edgezero-adapter-cloudflare/src/templates/: Cargo.toml.hbs  wrangler.toml.hbs
crates/edgezero-adapter-cloudflare/tests/: contract.rs
crates/edgezero-adapter-fastly/: Cargo.toml
crates/edgezero-adapter-fastly/.cargo/: config.toml
crates/edgezero-adapter-fastly/src/: chunked_config.rs  cli.rs  config_store.rs  context.rs  key_value_store.rs  kv.rs  lib.rs  logger.rs  proxy.rs  request.rs  response.rs  secret_store.rs  store_handles.rs
crates/edgezero-adapter-fastly/src/cli/: mod.rs  provision_cloud.rs  provision_local.rs  push_cloud.rs  push_local.rs  run.rs
crates/edgezero-adapter-fastly/src/templates/: Cargo.toml.hbs  fastly.toml.hbs
crates/edgezero-adapter-fastly/tests/: contract.rs
crates/edgezero-adapter-spin/: Cargo.toml
crates/edgezero-adapter-spin/.cargo/: config.toml
crates/edgezero-adapter-spin/src/: cli.rs  config_store.rs  context.rs  decompress.rs  key_value_store.rs  kv_pagination.rs  lib.rs  proxy.rs  request.rs  response.rs  secret_store.rs  seed.rs
crates/edgezero-adapter-spin/src/cli/: mod.rs  provision_local.rs  push_cloud.rs  push_local.rs  push_sqlite.rs  run.rs  runtime_config.rs
crates/edgezero-adapter-spin/src/templates/: Cargo.toml.hbs  runtime-config.toml.hbs  spin.toml.hbs
crates/edgezero-adapter-spin/tests/: contract.rs
crates/edgezero-adapter/src/: cli_support.rs  env_file.rs  lib.rs  registry.rs  scaffold.rs
crates/edgezero-cli/: Cargo.toml  README.md  build.rs
crates/edgezero-cli/src/: adapter.rs  args.rs  auth.rs  config.rs  copy_tree.rs  demo_server.rs  dev_server.rs  diff.rs  env_file.rs  generator.rs  lib.rs  main.rs  path_safety.rs  provision.rs  provision_lock.rs  scaffold.rs  shared_test_guards.rs  stream.rs  test_support.rs
crates/edgezero-cli/tests/: generated_project_builds.rs  lib_consumer.rs
crates/edgezero-core/: Cargo.toml
crates/edgezero-core/src/: addr.rs  app.rs  app_config.rs  blob_envelope.rs  body.rs  canonical_form.rs  chunked_config.rs  compression.rs  config_store.rs  context.rs  env_config.rs  error.rs  extractor.rs  handler.rs  http.rs  introspection.rs  key_value_store.rs  kv.rs  lib.rs  manifest.rs  middleware.rs  params.rs  proxy.rs  responder.rs  response.rs  router.rs  secret_store.rs  store_registry.rs  test_env.rs
crates/edgezero-core/tests/: canonical_form_pins.rs
crates/edgezero-macros/: Cargo.toml
crates/edgezero-macros/src/: action.rs  app.rs  app_config.rs  lib.rs  manifest_definitions.rs
crates/edgezero-macros/tests/: action_state.rs  app_config_cycle_guard.rs  app_config_derive.rs  app_macro.rs  nested_secrets_e2e.rs
crates/edgezero-macros/tests/fixtures/: owns_logging.toml
crates/edgezero-macros/tests/ui/: app_config_empty.rs  (+41 more)
docs/: index.md  (+7 more)
examples/anyedge-cloudflare-demo/: Cargo.toml  wrangler.toml
examples/anyedge-cloudflare-demo/src/: main.rs
examples/anyedge-fastly-demo/: Cargo.toml  fastly.toml
examples/anyedge-fastly-demo/.cargo/: config.toml
examples/anyedge-fastly-demo/src/: main.rs
examples/app-demo/: Cargo.toml  anyedge.toml  app-demo.toml  clippy.toml  edgezero.toml
(+220 files in other folders)
