[workspace]
members = [
    "crates/edgezero-adapter-axum",
    "crates/edgezero-adapter-cloudflare",
    "crates/edgezero-adapter-fastly",
    "crates/edgezero-adapter-spin",
    "crates/edgezero-adapter",
    "crates/edgezero-cli",
    "crates/edgezero-core",
    "crates/edgezero-macros",
]
exclude = ["examples/app-demo"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["EdgeZero Team <dev@edgezero.dev>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = [
    "futures-io",
    "gzip",
    "brotli",
] }
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", default-features = true }
brotli = "8"
bytes = "1"
chrono = "0.4"
ctor = "0.10"
edgezero-adapter = { path = "crates/edgezero-adapter" }
edgezero-adapter-axum = { path = "crates/edgezero-adapter-axum", default-features = false }
edgezero-adapter-cloudflare = { path = "crates/edgezero-adapter-cloudflare", default-features = false }
edgezero-adapter-fastly = { path = "crates/edgezero-adapter-fastly", default-features = false }
edgezero-adapter-spin = { path = "crates/edgezero-adapter-spin", default-features = false }
edgezero-core = { path = "crates/edgezero-core", default-features = false }
fastly = "0.12"
fern = "0.7"
flate2 = { version = "1", features = ["rust_backend"] }
futures = { version = "0.3", features = ["std", "executor"] }
futures-util = { version = "0.3", features = ["alloc", "io"] }
handlebars = "6"
http = "1"
http-body = "1"
log = "0.4"
log-fastly = "0.12"
matchit = "0.9"
once_cell = "1"
redb = "4.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
simple_logger = "5"
spin-sdk = { version = "5.2", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "1.1" }
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }
walkdir = { version = "2" }
web-time = "1"
worker = { version = "0.8", features = ["http"] }

[workspace.lints.clippy]
# Same strict gate as the demo workspace. Allow-list is the slim demo set —
# every additional allow has to earn its place with a real failure that
# can't be refactored away.
pedantic = { level = "warn", priority = -1 }
restriction = { level = "deny", priority = -1 }

# Meta — required when enabling `restriction` as a group.
blanket_clippy_restriction_lints = "allow"
# Several local sites legitimately need `#[allow]` rather than `#[expect]`
# because the underlying lint only fires in certain build configurations
# (e.g., dead_code with test cfg flipping the active items).
allow_attributes = "allow"

# Documentation — private items don't need full docs.
missing_docs_in_private_items = "allow"

# Style / formatting — match idiomatic Rust conventions.
implicit_return = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
separated_literal_suffix = "allow"
pub_with_shorthand = "allow"
pub_use = "allow"
# `e`, `id`, `i`, `kv`, `m`, `ty` are universal in Rust — renaming hurts readability.
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
shadow_reuse = "allow"
# `push_str(&format!(...))` is deliberately chosen over `write!(s, ...)` —
# the latter requires `.unwrap()` (write-to-String never fails) which itself
# fires `unwrap_used`. The current pattern keeps the call site readable.
format_push_string = "allow"
# `edgezero_core::CoreError` is clearer than bare `Error` in cross-crate use.
module_name_repetitions = "allow"

# Defensive coding — match-ergonomics destructures (`if let Some(x) = &foo`)
# universally; manual `&` patterns make the code noticeably worse.
pattern_type_mismatch = "allow"
# Type suffixes on every literal (`0_u32`, `1.0_f64`) is noise without
# bug-prevention value in routing/parsing/validator code.
default_numeric_fallback = "allow"
# Audited: every flagged site is bounded by domain invariants that the
# rest of the program enforces.
arithmetic_side_effects = "allow"
float_arithmetic = "allow"
# Audited: dominated by trait-object coercions that cannot be expressed via
# `From`/`Into`. Numeric narrowing casts are all bounded by checked input.
as_conversions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
# Audited: every flagged site indexes into ASCII-only data (env/header
# names, path components from `matchit`).
string_slice = "allow"
# Audited: lock-poisoning recovery, scaffold registration, and
# `load_from_str` on compile-time embedded manifests. Each site is
# documented with a per-fn `#[expect]` and reason where appropriate.
expect_used = "allow"
unwrap_in_result = "allow"
panic = "allow"
let_underscore_must_use = "allow"

# Item ordering — manifest.rs groups items by section (loader, app, triggers,
# environment, stores, logging, enums). Alphabetical reordering would scatter
# related items across the file and hurt readability for no correctness gain.
arbitrary_source_item_ordering = "allow"

# API design — `exhaustive_structs` fires on the unit struct generated by
# `edgezero_core::app!`. `exhaustive_enums` would force never-firing wildcard
# arms on `Body` and `AdapterAction` consumers.
exhaustive_structs = "allow"
exhaustive_enums = "allow"
# Getters returning `&str`/`&Path`/`&Foo` where ignoring the value is
# meaningless by construction — `#[must_use]` on every one is doc noise.
must_use_candidate = "allow"
# Default trait methods are fine; the lint wants every default method
# spelled out, which is pure boilerplate.
missing_trait_methods = "allow"
# Real fix applied to high-value sites; remaining are deliberate ownership
# transfers (proc-macro signatures, error converters that consume).
needless_pass_by_value = "allow"
# `pub(crate)` / `pub(super)` on fields are deliberate visibility choices.
field_scoped_visibility_modifiers = "allow"
partial_pub_fields = "allow"
# Pass-by-ref for `Method` / `StatusCode` is fine for API ergonomics.
trivially_copy_pass_by_ref = "allow"

# Imports / paths — `std::env::var()`-style one-shot uses don't benefit
# from a `use`. Generated binaries are std applications, not no_std libraries.
absolute_paths = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

# Cross-crate `#[inline]` is a hint that rustc/LLVM make better than us.
missing_inline_in_public_items = "allow"
# Lint matches plain `#[cfg(test)] mod tests` only — doesn't recognize our
# `#[cfg(all(test, feature = "..."))]` modules or integration test files.
tests_outside_test_module = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
# `#[expect]` attributes interact awkwardly with workspace-level allows;
# allow the meta-lint until each per-site `#[expect]` has been audited.
unfulfilled_lint_expectations = "allow"