[workspace]
members = [
    "crates/edgezero-adapter-axum",
    "crates/edgezero-adapter-cloudflare",
    "crates/edgezero-adapter-fastly",
    "crates/edgezero-adapter-spin",
    "crates/edgezero-adapter",
    "crates/edgezero-cli",
    "crates/edgezero-core",
    "crates/edgezero-macros",
]
exclude = ["examples/app-demo"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["EdgeZero Team <dev@edgezero.dev>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-compression = { version = "0.4", features = [
    "futures-io",
    "gzip",
    "brotli",
] }
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", default-features = true }
brotli = "8"
bytes = "1"
chrono = "0.4"
ctor = "0.10"
edgezero-adapter = { path = "crates/edgezero-adapter" }
edgezero-adapter-axum = { path = "crates/edgezero-adapter-axum", default-features = false }
edgezero-adapter-cloudflare = { path = "crates/edgezero-adapter-cloudflare", default-features = false }
edgezero-adapter-fastly = { path = "crates/edgezero-adapter-fastly", default-features = false }
edgezero-adapter-spin = { path = "crates/edgezero-adapter-spin", default-features = false }
edgezero-core = { path = "crates/edgezero-core", default-features = false }
fastly = "0.12"
fern = "0.7"
flate2 = { version = "1", features = ["rust_backend"] }
futures = { version = "0.3", features = ["std", "executor"] }
futures-util = { version = "0.3", features = ["alloc", "io"] }
handlebars = "6"
http = "1"
http-body = "1"
log = "0.4"
log-fastly = "0.12"
matchit = "0.9"
once_cell = "1"
redb = "4.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
simple_logger = "5"
spin-sdk = { version = "5.2", default-features = false }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = { version = "1.1" }
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
validator = { version = "0.20", features = ["derive"] }
walkdir = { version = "2" }
web-time = "1"
worker = { version = "0.8", features = ["http"] }

[workspace.lints.clippy]
# Same strict gate as the demo workspace. Allow-list mirrors the demo's
# slim set; every additional exception lives at the call site as a
# documented `#[allow]` or `#[expect]` rather than a workspace allow.
pedantic = { level = "warn", priority = -1 }
restriction = { level = "deny", priority = -1 }

# Meta — required when enabling `restriction` as a group.
blanket_clippy_restriction_lints = "allow"

# Documentation — private items don't need full docs.
missing_docs_in_private_items = "allow"

# Style / formatting — match idiomatic Rust conventions.
implicit_return = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
separated_literal_suffix = "allow"
# `e`, `id`, `i`, `kv`, `m`, `ty` are universal; renaming hurts readability.
min_ident_chars = "allow"
# `edgezero_core::CoreError` is clearer than bare `Error` cross-crate.
module_name_repetitions = "allow"
# `pub_with_shorthand` wants `pub(in crate)` but rustfmt unconditionally
# rewrites that to `pub(crate)`. Five legitimate cross-file `pub(crate)`
# items remain (dispatch_raw, dispatch_with_store_names, parse_uri,
# parse_client_addr, decompress_body) — they need at least crate visibility,
# and there is no spelling that satisfies both the lint and rustfmt.
pub_with_shorthand = "allow"

# `pattern_type_mismatch` and `ref_patterns` are mutually exclusive in modern
# Rust — every `if let Some(x) = &foo` flags the first, every
# `*foo { Variant(ref x) => ... }` flags the second. We pick match-ergonomics.
pattern_type_mismatch = "allow"
# Numeric routing/parsing literals: requiring `0_u32` on every integer is
# noise without bug-prevention value.
arithmetic_side_effects = "allow"
float_arithmetic = "allow"
# Numeric narrowing/widening casts that follow a checked range gate.
as_conversions = "allow"

# API design — `exhaustive_structs` fires on the unit struct generated by
# `edgezero_core::app!`. `exhaustive_enums` would force never-firing wildcard
# arms on `Body` consumers.
exhaustive_structs = "allow"
# `Body { Once, Stream }` is matched in ~60 sites across the workspace; making
# it `#[non_exhaustive]` would force a wildcard arm at every site that defeats
# the type system. The other public enums are similarly load-bearing.
exhaustive_enums = "allow"

# Imports / paths
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"

# Cross-crate `#[inline]` is a hint that rustc/LLVM make better than us.
missing_inline_in_public_items = "allow"


[workspace.lints.rust]
unsafe_code = "deny"