[package]
name = "anyedge-adapter-fastly"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[features]
default = []
cli = ["dep:toml", "dep:walkdir"]
fastly = ["dep:fastly", "dep:log-fastly", "dep:toml"]

[dependencies]
anyedge-core = { path = "../anyedge-core" }
async-stream = { workspace = true }
async-trait = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
fastly = { workspace = true, optional = true }
flate2 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
log-fastly = { workspace = true, optional = true }
fern = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
