[package]
name = "anyedge-adapter"
version = "0.1.0"
edition = "2021"
description = "Adapter registry and traits for AnyEdge adapters"

[features]
default = []
cli = ["dep:toml"]

[dependencies]
once_cell = { workspace = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
