[package]
name = "anyedge-cli"
version = "0.1.0"
edition = "2021"
description = "AnyEdge CLI: build and deploy to multiple edge providers"

[dependencies]
anyedge-adapter-fastly = { workspace = true, features = ["cli"] }
anyedge-core = { workspace = true}
app-demo-core = { path = "../../examples/app-demo/crates/app-demo-core", package = "app-demo-core", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
futures = { workspace = true }
handlebars = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true}

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["cli", "dev-example"]
cli = ["dep:clap"]
dev-example = ["dep:app-demo-core"]
