[package]
name = "anyedge-controller"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["json", "form"]
json = ["dep:serde_json"]
form = ["dep:serde_urlencoded"]

[dependencies]
anyedge-core = { path = "../anyedge-core" }
anyedge-macros = { path = "../anyedge-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
thiserror = "2"
futures = "0.3"
validator = { version = "0.20", features = ["derive"] }
