[package]
name = "anyedge-core"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
async-compression = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
matchit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
anyedge-macros = { path = "../anyedge-macros" }

[dev-dependencies]
brotli = { workspace = true }
flate2 = { workspace = true }
