[package]
name = "anyedge-macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
anyedge-controller = { path = "../anyedge-controller" }
anyedge-core = { path = "../anyedge-core" }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
