[package]
name = "anyedge-macros"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[dependencies]
log = { workspace = true }
proc-macro2 = "1"
quote = "1"
serde = { workspace = true, features = ["derive"] }
syn = { version = "2", features = ["full"] }
toml = { workspace = true }
validator = { workspace = true, features = ["derive"] }
