[package]
name = "edgezero-adapter-cloudflare"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[features]
default = []
cloudflare = ["dep:worker", "dep:serde_json"]
cli = [
    "dep:edgezero-adapter",
    "edgezero-adapter/cli",
    "dep:ctor",
    "dep:toml_edit",
    "dep:walkdir",
]

[dependencies]
anyhow = { workspace = true }
edgezero-core = { path = "../edgezero-core" }
edgezero-adapter = { path = "../edgezero-adapter", optional = true, features = [
    "cli",
] }
async-trait = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
ctor = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
worker = { version = "0.8", default-features = false, features = ["http"], optional = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
edgezero-core = { path = "../edgezero-core", features = ["test-utils"] }
tempfile = { workspace = true }
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Response",
    "Request",
    "Headers",
    "ReadableStream",
    "Blob",
] }
